[package]
name = "btdht-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
log = "0.4.20"
env_logger = "0.10.0"

tokio = { version = "1.32.0", features = ["full"] }

anyhow = "1.0.75"

rustydht-lib = "4.0.0"
warp = "0.3.5"